[project]
name = "safe-space-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
